# SDL_FFmpeg_Tutorial

./: CMakeLists.txt  README.md  README.txt  build.gradle  local.properties  proguard-rules.pro  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
liveplayer/: CMakeLists.txt  build.gradle  proguard-rules.pro
liveplayer/src/main/: AndroidManifest.xml
liveplayer/src/main/cpp/: Audio.cpp  Media.h  SDLTest.cpp  SamychenPush.c  VideoDisplay.h
liveplayer/src/main/cpp/ANativeplayer/: ANativeplayer.cpp  Audio2.cpp  Audio2.h  Log.h  Video2.cpp  Video2.h  native-lib.cpp
liveplayer/src/main/cpp/audio/: audiotrackplayer.cpp
liveplayer/src/main/cpp/sdlplayer/: SDL_Lesson.c  SDL_Lesson2.c  SyncAudio.c  SyncVideo.c  ff_play.c  ff_play.h  ff_queue.c  ff_queue.h  myplayer.c  tutorial05.c  tutorial06.c
liveplayer/src/main/java/com/samychen/gracefulwrapper/liveplayer/: ANativeWindowPlayerActivity.java  AudioTrackJNIActivity.java  DNPlayer.java  Main2Activity.java  MainActivity.java  OpenSLESActivity.java  StreamActivity.java
liveplayer/src/main/java/org/libsdl/app/: SDLActivity.java
liveplayer/src/main/jniLibs/src/video/: SDL_RLEaccel.c
liveplayer/src/main/res/layout/: activity_anative_window_player.xml  activity_audio_track_jni.xml  activity_main.xml  activity_main2.xml  activity_open_sles.xml  activity_stream.xml
liveplayer/src/main/res/values/: strings.xml
liveplayer/src/test/java/com/samychen/gracefulwrapper/liveplayer/: ExampleUnitTest.java
mscV5PlusDemo/: build.gradle
mscV5PlusDemo/src/main/: AndroidManifest.xml
mscV5PlusDemo/src/main/assets/: iat2.pcm
mscV5PlusDemo/src/main/java/com/iflytek/mscv5plusdemo/: MainActivity.java  OneShotDemo.java  UnderstanderDemo.java  WakeDemo.java
mscV5PlusDemo/src/main/java/com/iflytek/speech/setting/: UnderstanderSettings.java
mscV5PlusDemo/src/main/res/layout/: understander.xml
mscV5PlusDemo/src/main/res/values/: strings.xml
otsuDemo/: OtsuDemo.java
rtmplive/: build.gradle
rtmplive/src/main/cpp/: Rtmp.cpp
rtmplive/src/main/java/com/blueberry/media/: MediaEncoder.java
src/androidTest/java/com/tz/dream/sdl/ffmpeg/demo/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: Audio.h  AudioPlay.cpp  AudioPlay2.cpp  FrameQueue.cpp  FrameQueue.h  Media.cpp  PacketQueue.cpp  PacketQueue.h  SDLTest.cpp  Video.cpp  Video.h  VideoDisplay.cpp  VideoDisplay.h  ffmpeg.cpp  ffmpeg.h  fsplayer.cpp  info.h  main.cpp  mix_player.cpp  rtspplayer.cpp  rtspplayersdl.cpp  rtspplayersdls.cpp  rtspplayersdls2.cpp  simplest_ffmpeg_avutil.cpp  simplest_ffmpeg_helloworld.cpp  simplest_ffmpeg_picture_encoder.cpp  simplest_ffmpeg_player_sdl1.cpp  simplest_ffmpeg_player_sdl2.cpp  simplest_ffmpeg_player_su_sdl1.cpp  simplest_ffmpeg_player_su_sdl2.cpp  simplest_ffmpeg_streamer.cpp  simplest_ffmpeg_video_encoder.cpp  simplest_video_play_sdl2.cpp
src/main/cpp/sdlplayer/: SDL_Lesson.c  SDL_Lesson2.c  SyncVideo.c  common.c  common.h  data.h
src/main/java/com/tz/dream/sdl/ffmpeg/demo/: MainActivity.java  StreamActivity.java
src/main/java/org/libsdl/app/: SDLActivity.java
src/main/jniLibs/src/main/android/: SDL_android_main.c
src/main/res/layout/: activity_main.xml  activity_stream.xml
src/main/res/values/: strings.xml
src/test/java/com/tz/dream/sdl/ffmpeg/demo/: ExampleUnitTest.java
